...
                android:text="@string/steps_label"
                android:textColor="@color/black"
                android:textSize="@dimen/steps_label_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_steps_recycler_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_label_text_view" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
